services/cluster/gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: shared-gateway-http
  namespace: cloudijs-system
  annotations:
    cert-manager.io/issuer: letsencrypt-http
spec:
  gatewayClassName: cilium
  infrastructure:
    annotations:
      load-balancer.hetzner.cloud/name: "platform-shared"
      load-balancer.hetzner.cloud/location: "nbg1"
      load-balancer.hetzner.cloud/uses-proxyprotocol: "true"
  listeners:
    # test.cloudijs.nl
    - name: test-cloudijs-nl-https
      hostname: test.cloudijs.nl
      port: 443
      protocol: HTTPS
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: test-cloudijs-nl-tls
            kind: Secret
            group: ""
    - name: test-cloudijs-nl-http
      hostname: test.cloudijs.nl
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All

    # auth.cloudijs.nl
    - name: auth-cloudijs-nl-https
      hostname: auth.cloudijs.nl
      port: 443
      protocol: HTTPS
      allowedRoutes:
        namespaces:
          from: cloudijs-system
      tls:
        mode: Terminate
        certificateRefs:
          - name: auth-cloudijs-nl-tls
            kind: Secret
            group: ""
    - name: auth-cloudijs-nl-http
      hostname: auth.cloudijs.nl
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: cloudijs-system

    # flux.cloudijs.nl
    - name: flux-cloudijs-nl-https
      hostname: flux.cloudijs.nl
      port: 443
      protocol: HTTPS
      allowedRoutes:
        namespaces:
          from: cloudijs-system
      tls:
        mode: Terminate
        certificateRefs:
          - name: flux-cloudijs-nl-tls
            kind: Secret
            group: ""
    - name: flux-cloudijs-nl-http
      hostname: flux.cloudijs.nl
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: cloudijs-system

    # grafana.cloudijs.nl
    - name: grafana-cloudijs-nl-https
      hostname: grafana.cloudijs.nl
      port: 443
      protocol: HTTPS
      allowedRoutes:
        namespaces:
          from: cloudijs-monitoring
      tls:
        mode: Terminate
        certificateRefs:
          - name: grafana-cloudijs-nl-tls
            kind: Secret
            group: ""
    - name: grafana-cloudijs-nl-http
      hostname: grafana.cloudijs.nl
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: cloudijs-monitoring
